terraform/echo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: staging-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
        nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
    ingressClassName: public
    rules:
        -   http:
                paths:
                    -   path: /
                        pathType: Prefix
                        backend:
                            service:
                                name: echo2
                                port:
                                    number: 80
        -   http:
                paths:
                    -   path: /echo4
                        pathType: Prefix
                        backend:
                            service:
                                name: echo4
                                port:
                                    number: 80
